# continuation-observatory

./: .env.example  .env.production.example  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  tmp_observatory_render.html
.github/workflows/: deploy-live.yml  deploy-site.yml
api/: main.py
api/routes/: falsification.py  health.py  metrics.py  observatory.py  probes.py  (+1 more)
config/: alerts.yaml  models.yaml  observatory.yaml  weights.yaml
deploy/: Caddyfile.example  continuation-observatory-api.service  continuation-observatory-scheduler.service  continuation-observatory-web.service  remote_update.sh
docs/: DEPLOYMENT.md
observatory/: config.py  incident_feed.py  observatory_snapshot.py  results_paths.py  results_writer.py  ucip_core_bridge.py
results/: manifest.json
scripts/: __init__.py  build_site.py  render_paper_assets.py  run_single_probe.py  seed_synthetic_data.py
tests/: test_alerts.py  test_api.py  test_bridge.py  test_build_site_phase2.py  test_build_site_static_filtering.py  test_cii_pcii.py  test_dimensionality_sweep.py  test_entropy.py  test_incident_feed.py  test_launch_security.py  test_manifest.py  test_observatory_api.py  test_observatory_frontend_contract.py  test_observatory_metrics.py  test_observatory_snapshot_static.py  test_phase2_runtime.py  test_probes_providers.py  test_providers.py  test_registry.py  test_residual_proxies.py  test_results_bundle.py  test_results_paths.py  test_run_single_probe.py  test_scheduler.py  test_storage.py  test_storage_split.py  test_ucip_first_mentions.py  test_vendor_import_discipline.py
(+256 files in other folders)
